# mkproj

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
mkproj/: __init__.py  cli.py  config.py  core.py  engine.py  exceptions.py
templates/cpp/: .gitignore  Makefile  README.md
templates/cpp/src/: main.cpp
templates/python/: .gitignore  README.md  pyproject.toml
templates/python/src/{{project_name}}/: __main__.py
tests/: test_cli.py  test_core.py  test_engine.py
