[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkproj"
version = "0.1.0"
description = "A professional, extensible project scaffolding CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "mypy>=1.9",
    "ruff>=0.4",
]

[project.scripts]
mkproj = "mkproj.cli:app"
mkproj-templates = "mkproj.cli:templates_app"

[tool.setuptools.packages.find]
where = ["."]
include = ["mkproj*"]

[tool.setuptools.package-data]
mkproj = ["../templates/**/*", "../templates/**/.*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
